--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.1.2 <4.0.0'
 
 dependencies:
+  firebase_core: ^2.18.0
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.4.4
