--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,3 +44,6 @@ flutter:
           weight: 800
         - asset: assets/fonts/NotoSansJP-Black.ttf
           weight: 900
+
+  assets:
+    - assets/images/
