--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.1.2 <4.0.0'
 
 dependencies:
+  cloud_firestore: ^4.11.0
   firebase_core: ^2.18.0
   flutter:
     sdk: flutter
@@ -14,6 +15,8 @@ dependencies:
   geolocator: ^10.1.0
   google_fonts: ^6.1.0
   http: ^1.1.0
+  lottie: ^2.7.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -47,3 +50,4 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/lottie/
