--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   geolocator: ^10.1.0
   google_fonts: ^6.1.0
   http: ^1.1.0
+  intl: ^0.18.1
   lottie: ^2.7.0
   shared_preferences: ^2.2.2
 
