--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_core: ^2.18.0
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
   flutter_riverpod: ^2.4.4
   geolocator: ^10.1.0
   google_fonts: ^6.1.0
@@ -51,6 +52,7 @@ flutter:
           weight: 900
 
   assets:
+    - .env
     - assets/images/
     - assets/lottie/
     - assets/google_fonts/
