--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,9 +51,18 @@ flutter:
           weight: 800
         - asset: assets/fonts/NotoSansJP-Black.ttf
           weight: 900
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Inter-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Inter-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Inter-Bold.ttf
+          weight: 700
 
   assets:
     - env
     - assets/images/
     - assets/lottie/
-    - assets/google_fonts/
