--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: morning_web
 description: A new Flutter project.
 publish_to: 'none'
-version: 0.1.0
+version: 1.1.0
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
@@ -14,18 +14,19 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.1.0
   flutter_riverpod: ^2.4.4
-  geolocator: ^10.1.0
+  geolocator: ^11.0.0
   google_fonts: ^6.1.0
   http: ^1.1.0
-  intl: ^0.18.1
-  lottie: ^2.7.0
+  intl: ^0.19.0
+  lottie: ^3.1.0
   shared_preferences: ^2.2.2
   sprung: ^3.0.1
+  package_info_plus: ^6.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.2
 
 flutter:
   uses-material-design: true
