--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   shared_preferences: ^2.2.2
   sprung: ^3.0.1
   package_info_plus: ^6.0.0
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   flutter_test:
