--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: morning_web
-description: A new Flutter project.
+description: weblab morning app
 publish_to: 'none'
-version: 1.1.0
+version: 1.2.0
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
