--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: morning_web
 description: weblab morning app
 publish_to: 'none'
-version: 1.3.1
+version: 1.4.0
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
@@ -23,6 +23,7 @@ dependencies:
   sprung: ^3.0.1
   package_info_plus: ^6.0.0
   loading_animation_widget: ^1.2.1
+  holiday_jp: ^0.0.8
 
 dev_dependencies:
   flutter_test:
